--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
  /*--Author: W3Layouts
 	Author URL: http://w3layouts.com
 	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
+	License URL: http://creativecommons.org/licenses/by/3.0/ppppp
  --*/
 
 body {
