--- a/css/style.css
+++ b/css/style.css
@@ -822,7 +822,7 @@ section.stat_w3l{
     text-transform: capitalize;
 }
 .copyright p a{
-	color:#ea1d5d;
+	color:#42c8f4;
 	text-decoration: underline;
 }
 .copyright p a:hover {
