--- a/css/style.css
+++ b/css/style.css
@@ -938,7 +938,7 @@ ul.links li a:hover{
 h6.text-left a,.cpy-right p a{
     color: #42c8f4;
 }
-/*--//footer--*/
+/*--//foooter--*/
 .typo-wthree h4 {
 	color: #42c8f4;
 	font-size: 1.5em;
