--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,114 @@
+/* poppins-300 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 300;
+	src: url("./poppins/poppins-v5-latin-300.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Light"), local("Poppins-Light"), url("./poppins/poppins-v5-latin-300.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-300.woff2") format("woff2"), url("./poppins/poppins-v5-latin-300.woff") format("woff"), url("./poppins/poppins-v5-latin-300.ttf") format("truetype"), url("./poppins/poppins-v5-latin-300.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-300italic - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: italic;
+	font-weight: 300;
+	src: url("./poppins/poppins-v5-latin-300italic.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Light Italic"), local("Poppins-LightItalic"), url("./poppins/poppins-v5-latin-300italic.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-300italic.woff2") format("woff2"), url("./poppins/poppins-v5-latin-300italic.woff") format("woff"), url("./poppins/poppins-v5-latin-300italic.ttf") format("truetype"), url("./poppins/poppins-v5-latin-300italic.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-regular - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 400;
+	src: url("./poppins/poppins-v5-latin-regular.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Regular"), local("Poppins-Regular"), url("./poppins/poppins-v5-latin-regular.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-regular.woff2") format("woff2"), url("./poppins/poppins-v5-latin-regular.woff") format("woff"), url("./poppins/poppins-v5-latin-regular.ttf") format("truetype"), url("./poppins/poppins-v5-latin-regular.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-italic - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: italic;
+	font-weight: 400;
+	src: url("./poppins/poppins-v5-latin-italic.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Italic"), local("Poppins-Italic"), url("./poppins/poppins-v5-latin-italic.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-italic.woff2") format("woff2"), url("./poppins/poppins-v5-latin-italic.woff") format("woff"), url("./poppins/poppins-v5-latin-italic.ttf") format("truetype"), url("./poppins/poppins-v5-latin-italic.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-500 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 500;
+	src: url("./poppins/poppins-v5-latin-500.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Medium"), local("Poppins-Medium"), url("./poppins/poppins-v5-latin-500.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-500.woff2") format("woff2"), url("./poppins/poppins-v5-latin-500.woff") format("woff"), url("./poppins/poppins-v5-latin-500.ttf") format("truetype"), url("./poppins/poppins-v5-latin-500.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-500italic - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: italic;
+	font-weight: 500;
+	src: url("./poppins/poppins-v5-latin-500italic.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Medium Italic"), local("Poppins-MediumItalic"), url("./poppins/poppins-v5-latin-500italic.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-500italic.woff2") format("woff2"), url("./poppins/poppins-v5-latin-500italic.woff") format("woff"), url("./poppins/poppins-v5-latin-500italic.ttf") format("truetype"), url("./poppins/poppins-v5-latin-500italic.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-600 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 600;
+	src: url("./poppins/poppins-v5-latin-600.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins SemiBold"), local("Poppins-SemiBold"), url("./poppins/poppins-v5-latin-600.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-600.woff2") format("woff2"), url("./poppins/poppins-v5-latin-600.woff") format("woff"), url("./poppins/poppins-v5-latin-600.ttf") format("truetype"), url("./poppins/poppins-v5-latin-600.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-700 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 700;
+	src: url("./poppins/poppins-v5-latin-700.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Bold"), local("Poppins-Bold"), url("./poppins/poppins-v5-latin-700.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-700.woff2") format("woff2"), url("./poppins/poppins-v5-latin-700.woff") format("woff"), url("./poppins/poppins-v5-latin-700.ttf") format("truetype"), url("./poppins/poppins-v5-latin-700.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-700italic - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: italic;
+	font-weight: 700;
+	src: url("./poppins/poppins-v5-latin-700italic.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Bold Italic"), local("Poppins-BoldItalic"), url("./poppins/poppins-v5-latin-700italic.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-700italic.woff2") format("woff2"), url("./poppins/poppins-v5-latin-700italic.woff") format("woff"), url("./poppins/poppins-v5-latin-700italic.ttf") format("truetype"), url("./poppins/poppins-v5-latin-700italic.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-800 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 800;
+	src: url("./poppins/poppins-v5-latin-800.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins ExtraBold"), local("Poppins-ExtraBold"), url("./poppins/poppins-v5-latin-800.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-800.woff2") format("woff2"), url("./poppins/poppins-v5-latin-800.woff") format("woff"), url("./poppins/poppins-v5-latin-800.ttf") format("truetype"), url("./poppins/poppins-v5-latin-800.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-800italic - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: italic;
+	font-weight: 800;
+	src: url("./poppins/poppins-v5-latin-800italic.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins ExtraBold Italic"), local("Poppins-ExtraBoldItalic"), url("./poppins/poppins-v5-latin-800italic.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-800italic.woff2") format("woff2"), url("./poppins/poppins-v5-latin-800italic.woff") format("woff"), url("./poppins/poppins-v5-latin-800italic.ttf") format("truetype"), url("./poppins/poppins-v5-latin-800italic.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+/* poppins-900 - latin */
+@font-face {
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 900;
+	src: url("./poppins/poppins-v5-latin-900.eot");
+	/* IE9 Compat Modes */
+	src: local("Poppins Black"), local("Poppins-Black"), url("./poppins/poppins-v5-latin-900.eot?#iefix") format("embedded-opentype"), url("./poppins/poppins-v5-latin-900.woff2") format("woff2"), url("./poppins/poppins-v5-latin-900.woff") format("woff"), url("./poppins/poppins-v5-latin-900.ttf") format("truetype"), url("./poppins/poppins-v5-latin-900.svg#Poppins") format("svg");
+	/* Legacy iOS */ }
+
+
+
  /*--Author: W3Layouts
 	Author URL: http://w3layouts.com
 	License: Creative Commons Attribution 3.0 Unported
@@ -8,6 +119,7 @@ body {
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 	background: #fff;
+	overflow-x: hidden;
 }
 
 body a,
@@ -185,7 +297,8 @@ header h1 a span {
 	-o-background-size: cover;
 	-ms-background-size: cover;
 	background-size: cover;
-	height: 95vh;
+	height: 92.5vh;
+	width: 100vw;
 	position: relative;
 }
 
@@ -1390,9 +1503,6 @@ section.blog_w3ls {
 .callbacks_tabs {
     bottom: -60px;
 }
-.banner {
-    height: 57vw;
-}
 }
 
 @media screen and (max-width: 768px) {
@@ -1485,9 +1595,6 @@ section.blog_w3ls {
     width: 98%;
     left: 0.5em;
 }
-.banner {
-    height: 62vw;
-}
 }
 
 @media screen and (max-width: 600px) {
@@ -1553,9 +1660,6 @@ section.blog_w3ls {
     width: 100%;
     left: 0;
 }
-	.banner {
-		height: 82vw;
-	}
 	.logo h2 a {
 		font-size: 1.1em;
 	}
@@ -1654,9 +1758,6 @@ section.blog_w3ls {
 .footer_w3layouts_section_1its h3, .footer_w3layouts_section_1its h2 {
     font-size: 1.3em;
 }
-.banner {
-    height: 94vw;
-}
 }
 
 @media screen and (max-width: 375px) {
@@ -1674,9 +1775,6 @@ section.blog_w3ls {
 }
 .slider-info h3 {
     font-size: 26px;
-}
-.banner {
-    height: 103vw;
 }
 	.slider-info a {
 		font-size: 15px;
