--- a/css/style.css
+++ b/css/style.css
@@ -341,8 +341,8 @@ li.breadcrumb-item a {
 }
 #trip_form
 {
-	font-family: 'Teko', sans-serif;
-	font-size: 18px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
 	background: rgb(0,0,0,0.5);
 	margin: 2.5% auto;
 	display: flex;
