--- a/css/style.css
+++ b/css/style.css
@@ -1398,6 +1398,17 @@ p.card-text {
 .phn_w3l{
 	text-align:right;
 }
+
+
+
+
+
+
+
+
+
+
+*{font-family: 'Source Sans Pro', sans-serif;}
 /* -- Responsive code -- */
 
 @media screen and (max-width: 1440px) {
